--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/server.js"
+    "start": "node build/server.ts",
+    "build": "tsc",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "typegraphql",
