--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "node build/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/server.ts",
+    "start": "node build/server.js",
     "build": "tsc",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "typegraphql",
